# rybical

./: .gitignore  README.md  app.py  generate_token.py  pyproject.toml  review_dashboard.ipynb  test_rybical.ipynb  utils.py
config/: restaurants.toml  users.toml
scripts/: hash_password.py
