[project]
name = "rybical"
version = "0.1.0"
description = ""
authors = [
    {name = "LukaszRegulski03",email = "regulskiu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "openai (>=2.26.0,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
